# dere

./: .env.example  .gitignore  .oxlintrc.json  CLAUDE.md  LICENSE  Makefile  Procfile  README.ja.md  README.md  README.zh.md  TODO-ts-migration.md  TODO.md  TODO_INFRA.md  UI.md  alembic.ini  config.toml.example  docker-compose.yml  go.mod  go.sum  justfile  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json
.claude/: settings.json
cmd/dere/: main.go
cmd/dere-hook/: main.go
cmd/dere-hook-session-end/: main.go
cmd/dere-statusline/: main.go
docker/postgres-age/: Dockerfile  init-extensions.sql
docker/sandbox/: Dockerfile  entrypoint.py  entrypoint.ts
docs/architecture/: ambient-exploration.md
docs/refactoring/: additional-moves.md  filesystem-organization-plan.md
go_legacy/activitywatch/: client.go
go_legacy/commands/: generator.go
go_legacy/composer/: context_builder.go
go_legacy/config/: settings.go
go_legacy/context/: context.go
go_legacy/core/: context.go
go_legacy/daemon/: server.go
go_legacy/database/: transactions.go  turso.go  turso_test.go
go_legacy/embeddings/: interface.go
go_legacy/errors/: errors.go
go_legacy/mcp/: services.go
go_legacy/personality/: factory.go  interface.go  loader.go  toml_based.go  types.go
go_legacy/taskqueue/: processor.go  queue.go  types.go
go_legacy/weather/: client.go
hooks/: capture_embedding.py
hooks/python/: dere-context-hook.py  dere-hook-session-end.py  dere-hook.py  dere-statusline.py  dere-stop-hook.py  dere-subagent-pre-start.py  dere-task-hook.py  dere-wellness-hook.py  rpc_client.py
mcp/: pyproject.toml
mcp/dere_mcp/: main.py
migrations/: env.py
migrations/versions/: 1621be72eeea_add_missing_database_indices.py  181a0e67244b_baseline_tables_created_directly.py  2378ef323cb8_add_missions_tables.py  3782111053b0_remove_unused_mode_fields.py  47d8676ce794_baseline_tables_created_directly.py  8c100df71c87_drop_unused_tables.py  94572cd92089_drop_wellness_sessions_table.py  985ace416d98_convert_datetime_columns_to_timestamptz.py  a1b2c3d4e5f6_add_sandbox_fields_to_sessions.py  a4b5c6d7e8f9_add_supervisor_fields_to_swarms.py  add_response_time_to_notifications.py  b7c8d9e0f1a2_add_exploration_findings.py  c1d2e3f4g5h6_add_conversation_block_embeddings.py  c5a44ace8c02_task_queue_processed_at_timezone_aware.py  cde1592138c8_add_notification_escalation_support.py  d1e2f3g4h5i6_merge_exploration_findings_and_task_queue.py  d2e3f4g5h6i7_add_core_memory_blocks.py  d81ebb0487af_add_session_mission_id_and_run_once.py  e2f3a4b5c6d7_add_bond_state_table.py  e8978ca16a07_simplify_single_personality_architecture.py  e9d746cbf24a_fix_emotion_schema_constraints.py  f3g4h5i6j7k8_add_ui_preferences_table.py  f9cb2d4c9cfe_simplify_single_personality_architecture.py  fb8f6ae82b83_add_thinking_budget_to_sessions.py  g4h5i6j7k8l9_add_rare_events_table.py  h5i6j7k8l9m0_nullable_session_id_emotion.py  i6j7k8l9m0n1_drop_tamagotchi_tables.py  j7k8l9m0n1o2_session_summary_column.py  k8l9m0n1o2p3_add_summary_context.py  l9m0n1o2p3q4_add_sandbox_settings.py  m1n2o3p4q5r6_drop_conversation_embeddings.py  mrg1a2b3c4d5e_merge_heads.py  n2o3p4q5r6s7_add_conversation_metrics.py  o1p2q3r4s5t6_add_consolidation_runs.py  r6s7t8u9v0w1_add_conversation_response_ms.py  s7t8u9v0w1x2_add_conversation_blocks_table.py  t8u9v0w1x2y3_add_swarm_tables.py  u9v0w1x2y3z4_make_swarm_parent_optional.py  v0w1x2y3z4a5_swarm_dependency_specs.py  w1x2y3z4a5b6_add_project_tasks.py  (+3 more)
plugins/.claude-plugin/: marketplace.json
plugins/dere_code/: README.md
plugins/dere_productivity/: CALENDAR_SETUP.md
plugins/dere_vault/: README.md
prompts/modes/: cbt.md  checkin.md  goals.md  mindfulness.md  therapy.md
schemas/config/: dere_config.schema.json
schemas/llm/: ambient_engagement_decision.schema.json  ambient_mission_decision.schema.json  appraisal_output.schema.json  exploration_output.schema.json  schedule_parse_result.schema.json  session_title_result.schema.json
schemas/openapi/: dere_daemon.openapi.json
scripts/: export_openapi.py  export_openapi.ts  export_schemas.py  export_schemas.ts  install.sh
src/cli/: cli.go
src/commands/: generator.go  wellness.go
src/composer/: composer.go  context_builder.go  context_builder_bench_test.go
src/config/: config.go  settings.go
src/context/: context.go
src/daemon/: daemon.go  handlers.go  server.go
src/database/: transactions.go  turso.go  turso_bench_test.go
src/dere_ambient/: __init__.py  analyzer.py  config.py  explorer.py  fsm.py  main.py  monitor.py  notifier.py
src/dere_cli/: main.py  mcp.py  subcommands.py  wrapper.py
src/dere_daemon/: context.py  context_tracking.py  database.py  dependencies.py  main.py  ollama_client.py  routing.py  task_processor.py
src/dere_discord/: __init__.py  agent.py  bot.py  config.py  daemon.py  daemon_agent.py  main.py  message_handler.py  paths.py  persona.py  retry.py  session.py
src/dere_graph/: .gitignore  PLAN.md  README.md  TESTING.md  config.toml  pyproject.toml  test_temporal_query.py
src/dere_graph/dere_graph/: __init__.py  communities.py  config.py  driver.py  embeddings.py  eval_cli.py  evals.py  filters.py  graph.py  llm_client.py  models.py  operations.py  postgres.py  prompts.py  reranking.py  routing.py  search.py  traversal.py
src/dere_graph/falkor-data/: dump.rdb
src/dere_graph/tests/: __init__.py  test_bfs_selection.py  test_communities.py  test_cross_encoder.py  test_eval_cli.py  test_eval_data.py  test_evals.py  test_integration.py  test_models.py  test_routing.py  test_search.py
src/dere_graph/tests/data/: eval_cases.json
src/dere_obsidian/: __init__.py  claude_client.py  main.py  models.py  prompt_loader.py  server.py  vault_parser.py
src/dere_plugin/: __init__.py
src/dere_plugins/: __init__.py
src/dere_shared/: activitywatch.py  agent_models.py  (+14 more)
tests/: conftest.py  test_context_tracking.py  test_discord_config.py  test_discord_session.py  test_llm_client_parsing.py  test_swarm_cycle_detection.py
ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+553 files in other folders)
