[project]
name = "dere"
version = "0.1.0"
description = "Personality-layered wrapper for Claude Code with conversation persistence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "libsql>=0.1.11",
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.10",
    "click>=8.3.0",
    "discord.py>=2.4.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.2.10",
    "pymupdf>=1.23.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.3",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "honcho>=1.1.0",
]

[project.scripts]
dere = "dere_cli.main:cli"
dere-daemon = "dere_daemon.main:main"
dere-discord = "dere_discord.main:run"
dere-obsidian = "dere_obsidian.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dere_daemon", "src/dere_cli", "src/dere_shared", "src/dere_discord", "src/dere_ambient", "src/dere_obsidian"]

[tool.hatch.build.targets.wheel.force-include]
"src/dere-plugins/dere_plugin" = "dere_plugin"
"src/dere-plugins/dere_vault" = "dere_vault"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
