[project]
name = "dere"
version = "0.1.0"
description = "Personality-layered wrapper for Claude Code with conversation persistence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.118.0",
  "uvicorn>=0.37.0",
  "claude-agent-sdk>=0.1.0",
  "httpx>=0.28.1",
  "pydantic>=2.11.10",
  "typer>=0.12.0",
  "loguru>=0.7.3",
  "sqlalchemy>=2.0.0",
  "sqlmodel>=0.0.22",
  "asyncpg>=0.30.0",
  "pgvector>=0.3.0",
  "pymupdf>=1.23.0",
  "tiktoken>=0.5.0",
  "pyyaml>=6.0.0",
  "jinja2>=3.1.0",
  "pyzotero>=1.7.5",
  "fastmcp>=2.14.0",
  "youtube-transcript-api>=1.2.3",
  "aiodocker>=0.23.0",
  "tomlkit>=0.12.0",
  "croniter>=2.0.0",
  "sentry-sdk[fastapi,loguru]>=2.19.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.13.3", "mypy>=1.18.2", "pytest>=8.4.2", "pytest-asyncio>=1.2.0", "honcho>=1.1.0"]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.ty.overrides]]
include = ["hooks/**/*.py"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["src/**/*.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"

[[tool.ty.overrides]]
include = ["src/dere_plugins/**/scripts/**/*.py"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"
unresolved-reference = "warn"
